<resources>
    <string name="app_name">Common Units Converter</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="theme">Theme:</string>
    <string name="hyphen">-</string>
    <string name="conversion_symbol">Conversion symbol.</string>
    <string name="number">number</string>
    <string name="conversion_arrow">→</string>
    <string name="length">Length</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="mass">Mass</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="speed">Speed</string>
    <string name="km_h">km/h</string>
    <string name="mi_h">mi/h</string>

    <string-array name="night_mode_array">
        <item> </item>
        <item>Dark</item>
        <item>Light</item>
        <item>Use device theme</item>
    </string-array>
</resources>